_includes/manuals/2.1/5.4.2_comms_proxy.md

Foreman makes HTTP requests to smart proxies for a variety of orchestration tasks.  In a production setup, these should use SSL certificates so the smart proxy can verify the identity of the Foreman host.

In a simple setup, a single Puppet Certificate Authority (CA) can be used for authentication between Foreman and proxies.  In more advanced setups with multiple CAs or an internal CA, the services can be configured as follows.

#### Proxy configuration options

`/etc/foreman-proxy/settings.yml` contains the locations to the SSL certificates and keys:

<pre>
---
# SSL Setup

# if enabled, all communication would be verified via SSL
# NOTE that both certificates need to be signed by the same CA in order for this to work
# see https://projects.theforeman.org/projects/smart-proxy/wiki/SSL for more information
:ssl_certificate: /etc/puppetlabs/puppet/ssl/certs/FQDN.pem
:ssl_ca_file: /etc/puppetlabs/puppet/ssl/certs/ca.pem
:ssl_private_key: /etc/puppetlabs/puppet/ssl/private_keys/FQDN.pem
</pre>

In this example, the proxy is sharing Puppet's certificates, but it could equally use its own.

In addition it contains a list of hosts that connections will be accepted from, which should be the host(s) running Foreman:

<pre>
# the hosts which the proxy accepts connections from
# commenting the following lines would mean every verified SSL connection allowed
:trusted_hosts:
- foreman.corp.com
#- foreman.dev.domain
</pre>


##### Configuring Foreman

For Foreman to connect to an SSL-enabled smart proxy, it needs configuring with SSL certificates in the same way.

The locations of the certificates are managed in the *Settings* page, under *Provisioning* - the _ssl_ca_file_, _ssl_certificate_ and _ssl_priv_key_ settings.  By default these will point to the Puppet locations - for manually generated certificates, or non-standard locations, they may have to be changed.

Lastly, when adding the smart proxy in Foreman, ensure the URL begins with `https://` rather than `http://`.


##### Sharing Puppet certificates

If using Puppet's certificates, the following lines will be required in puppet.conf to relax permissions to the `puppet` group.  The `foreman` and/or `foreman-proxy` users should then be added to the `puppet` group.

<pre>
[main]
privatekeydir = $ssldir/private_keys { group = service }
hostprivkey = $privatekeydir/$certname.pem { mode = 640 }
</pre>

Note that the "service" keyword will be interpreted by Puppet as the "puppet" service group.
